replace propriatery sun.misc.BASE64Encoder per java.util.Base64